Remove background section

--- a/final-submission/final-submission.tex
+++ b/final-submission/final-submission.tex
@@ -83,12 +83,7 @@
 \begin{abstract}
 \addchaptertocentry{\abstractname} % Add the abstract to the table of contents
 
-
-\section*{Motivation} % Auch Ausgangslage
-
-\section*{Goals / Approach / Technology}
-
-\section*{Results}
+% Wie haben wir es gelöst (ganz kurz)
 
 % Hints for writing the abstract:
 % 
@@ -115,7 +110,15 @@
 \chapter{Management Summary}
 \addchaptertocentry{\abstractname} % Add the abstract to the table of contents
 \emph{The Thesis Management is written here (and usually kept to just this page).}
-% TODO: Unteschied zu Abstract?
+
+
+\section*{Motivation} % Auch Ausgangslage
+
+\section*{Goals / Approach / Technology}
+% Technology: Neue Sprache
+
+\section*{Results}
+
 
 %----------------------------------------------------------------------------------------
 %	ACKNOWLEDGEMENTS
@@ -150,9 +153,8 @@ We would like to thank our advisor, Prof.Dr. Farhad Mehta, for his continuous su
 \pagestyle{thesis} % Return the page headers back to the "thesis" style
 
 \include{chapters/1_introduction}
-\include{chapters/2_background}
-\include{chapters/3_our_approach}
-\include{chapters/4_discussion_and_conclusion}
+\include{chapters/2_our_approach}
+\include{chapters/3_discussion_and_conclusion}
 
 \subsubsection*{} %This is needed, so that not the next page is referenced.
 \label{lastpage} %TODO: This label should be positioned below above the last paragraph
