Add Tast Description and Project Plan as appendix

--- a/final-submission/final-submission.tex
+++ b/final-submission/final-submission.tex
@@ -205,6 +205,10 @@ We would like to thank our advisor, Prof.Dr. Farhad Mehta, for his continuous su
 \chapter{Appendices}
 \setcounter{secnumdepth}{3}
 \renewcommand{\thechapter}{A}
+\section{Task Description}\label{sec:task-description}
+\includepdf[pages=-,scale=.9,frame]{../problem-statement/problem-statement.pdf}
+\section{Project Plan}\label{sec:project-plan}
+\includepdf[pages=-,scale=.9,frame]{../project-plan/project-plan.pdf}
 \include{appendices/requirements}
 \include{appendices/architecture}
 \include{appendices/morphological_box}
