--- a/latex_template.tex
+++ b/latex_template.tex
@@ -28,6 +28,7 @@ consistentlayout, % Uncomment to change the layout of the declaration, abstract 
 \usepackage{makecell}
 \usepackage{float}
 \usepackage{url}
+\usepackage{pdfpages}
 \usepackage[autostyle=true]{csquotes} % Required to generate language-dependent quotes in the bibliography
 
 \newcommand*{\fullref}[1]{\hyperref[{#1}]{\ref*{#1} \nameref*{#1}}} % One single link
