--- a/final-submission/final-submission.tex
+++ b/final-submission/final-submission.tex
@@ -135,7 +135,9 @@ Finally, we present a prototype of the proposed client and node applications wit
 
 \begin{acknowledgements}
 \addchaptertocentry{\acknowledgementname} % Add the acknowledgements to the table of contents
-We would like to thank our advisor, Prof.Dr. Farhad Mehta, for his continuous support.
+We would like to thank our advisor, Prof.~Dr.~Farhad~Mehta, for his continuous support and helpful comments.
+
+Furthermore, we would like to thank Andrea~Jurt~Massey for her feedback regarding writing and language use.
 
 \end{acknowledgements}
 
