documentations capital should be lowercase

--- a/final-submission/final-submission.tex
+++ b/final-submission/final-submission.tex
@@ -72,7 +72,7 @@
 
 \noindent \textcopyright  Copyright 2017 by Fabian Hauser and Raphael Zimmermann\\
 
-\noindent This Documentation is available under the GNU FDL License. \\
+\noindent This documentation is available under the GNU FDL License. \\
 
 \noindent The Redbackup software is licensed under the AGPL-License. This does not apply to third-party libraries.
 
