Add updated sprint details in the project plan

--- a/project-plan/project-plan.tex
+++ b/project-plan/project-plan.tex
@@ -116,10 +116,10 @@ The goals and milestones resulting from each sprint are shown in Figure \ref{fig
 
 \begin{figure}[h]
 	\begin{sideways}
-	\includegraphics[scale=0.75]{resources/sprint_details}
+	\includegraphics[scale=0.75]{resources/sprint_details_updated}
 	\end{sideways}
 	\centering
-	\caption{Detailed overview with tasks and milestones of all 14 sprints.}
+	\caption{Detailed overview with tasks and milestones of all 14 sprints. \textit{Italic} and \sout{struck out} text mark deviations from the original project plan that occurred during the projects course.}
 	\label{fig:sprint-details}
 \end{figure}
 
