--- a/project-plan/project-plan.tex
+++ b/project-plan/project-plan.tex
@@ -274,20 +274,23 @@ Because the project plan allows for an iterative process, we use JIRA with its S
 Each sprint is mapped to JIRA, which allows the project advisor to trace the project progress. Sprints are represented as boards on which the current state and assignee of any issue is easily visible ("To Do", "In Progress", "Review", "Done").
 
 
-\subsection{Definition of Done}
+\subsection{Definition of Done / Review of Pull Requests}
 An issue may be closed if \emph{all} of the following conditions are met:
 
 \begin{itemize}
-	\item All functionality conforms to the specification. Any deviations must be discussed and decided by the team.
-	\item The source code is reasonably documented.
-	\item No code is commented out.
-	\item No warnings and errors by the compiler or any other quality tool.
-	\item A review is performed and accepted in a pull request.
-	\item The corresponding branch is merged into the stable branch (e.g. master).
-	\item All documents are up to date including the project website.
-	\item Reasonable unit and integration tests exist and pass.
-	\item The complete continuous integration pipeline works.
-	\item All time is logged.
+    \item All functionality conforms to the specification. Any deviations must be discussed and decided by the team.
+    \item A review is performed and accepted in a pull request.
+        \begin{itemize}
+            \item The source code is reasonably documented.
+            \item No code is commented out.
+            \item No warnings and errors by the compiler or any other quality tool.
+            \item Reasonable unit and integration tests exist and pass.
+            \item All documentations are up to date including the project website.
+            \item The complete continuous integration pipeline works.
+            \item The code is formatted according to the guidlines (i.e. according to RustFmt)
+        \end{itemize}
+    \item The corresponding branch is merged into the stable branch (e.g. master).
+    \item All time is logged.
 \end{itemize}
 
 \section{Development}
