--- a/final-submission/final-submission.tex
+++ b/final-submission/final-submission.tex
@@ -129,7 +129,7 @@ Finally, we present a prototype of the proposed client and node applications wit
 \section*{Motivation} % Auch Ausgangslage
 Today, most individuals and small to medium enterprises make backups on cloud environments or local storage media as e.g. hard disk drives or network attached storage systems (NAS).
 
-These solutions require either high personal efforts to maintain local storage media or a high level of trust in third party storage provider.
+These solutions require either high personal efforts to maintain local storage media or a high level of trust in a third party storage provider.
 
 Currently, there are no backup systems available on the market which are both easy to use and provide the user with a high level of data security and privacy.
 
