Explain notable project deviations

--- a/project-plan/project-plan.tex
+++ b/project-plan/project-plan.tex
@@ -1,3 +1,4 @@
+% !TeX spellcheck = en_GB
 \input{../latex_template}
 
 \usepackage{tabu}
@@ -113,6 +114,17 @@ Due to the explorative nature of the project, we decided on a sprint duration of
 \end{figure}
 
 The goals and milestones resulting from each sprint are shown in Figure \ref{fig:sprint-details}.
+
+\subsection{Deviations from Original Schedule}
+
+The tasks and milestones were continuously updated during the project course, as is evident from Figure \ref{fig:sprint-details}. The most notable additions and exclusions are noted hereafter.
+
+\begin{description}
+    \item[Research Report] After the underlying research at the project start, we decided to not further research and summarise possible data distribution mechanisms, as it would not have been possible to finish the report and project in time otherwise.
+    \item[Rust Programming Language] As we settled for the Rust programming language in the language evaluation, we introduced the additional task to get familiar with rust an its network stack.
+    \item[Retrospective 2] During the last standup meeting in sprint 6, we decided to not hold the retrospective meeting 2, as we both had no open topics to discuss.
+    \item[Presentation] We decided to not create a presentation during the project course as this is no mandatory part of the study project.
+\end{description}
 
 \begin{figure}[h]
 	\begin{sideways}
