Finalize first draft of our approach

--- a/final-submission/references.bib
+++ b/final-submission/references.bib
@@ -221,7 +221,18 @@
  year = {1996},
  isbn = {0471958697, 9780471958697},
  publisher = {Wiley Publishing},
-} 
+}
+
+@book{POSA2,
+ author = {Schmidt, Douglas C. and Stal, Michael and Rohnert, Hans and Buschmann, Frank},
+ title = {Pattern-Oriented Software Architecture: Patterns for Concurrent and Networked Objects},
+ year = {2000},
+ isbn = {0471606952, 9780471606956},
+ edition = {2nd},
+ publisher = {John Wiley \& Sons, Inc.},
+ address = {New York, NY, USA},
+}
+
 @book{security-patterns,
  author = {Schumacher, Markus and Fernandez, Eduardo and Hybertson, Duane and Buschmann, Frank},
  title = {Security Patterns: Integrating Security and Systems Engineering},
@@ -249,3 +260,11 @@ pages={129-140},
 doi={10.1109/SECPRI.1996.502676},
 ISSN={1081-6011},
 month={May},}
+
+@ONLINE{sqlite-locking,
+	author = {{The SQLite Authors}},
+	title = {{File Locking And Concurrency In SQLite Version 3}},
+	year = 2017,
+	urldate = {2017-12-11},
+	howpublished={\url{https://www.sqlite.org/lockingv3.html}},
+}
