Minor adjustments to improve readability

--- a/project-plan/project-plan.tex
+++ b/project-plan/project-plan.tex
@@ -106,7 +106,7 @@ The project schedule is an iterative process based on elements of SCRUM.
 Due to the explorative nature of the project, we decided on a sprint duration of one week.
 \subsection{Iterations \& Milestones}
 
-\begin{figure}[h!]
+\begin{figure}[h]
 	\centering
 	\includegraphics[width=1\linewidth]{resources/overview}
 	\caption{Overview of the 14 iterations}
@@ -140,7 +140,7 @@ The tasks and milestones were continuously updated during the project course, as
 
 The team works every Tuesday (10:00 - 17:00) together in the study project room and every Monday (08:00 - 17:00) remotely. Both days begin with a daily stand-up meeting taking no longer than 15 minutes. Sprint planning meetings are carried out on Tuesday at 10:00. Table \ref{meeting-time-budget} shows an overview of the total meeting time budget.
 
-\begin{table}[]
+\begin{table}[h]
 	\centering
 	\caption{Meeting Time Budget}
 	\label{meeting-time-budget}
