Proper spacing for problem statement

--- a/problem-statement/problem-statement.tex
+++ b/problem-statement/problem-statement.tex
@@ -131,9 +131,10 @@ The HSR supervisor is responsible for grading the study project. The following t
 
 The effective regulations of the HSR and Department of Computer Science apply (see \url{https://www.hsr.ch/Ablaeufe-und-Regelungen-Studie.7479.0.html}).
 
+\pagebreak
 \noindent
 \vspace{2cm}\\
-Rapperswil, \today\\
+Rapperswil, December 2017\\
 \vspace{1.5cm}\\
 \noindent
 Prof. Dr. Farhad Mehta
