Clean up References

--- a/final-submission/appendices/language-evaluation.tex
+++ b/final-submission/appendices/language-evaluation.tex
@@ -81,7 +81,7 @@ We grouped the criterions for our comparison into three groups: Client (See Tabl
 		\\
 		
 		provide a stable and fast network stack
-		& Yes, in the standard library as well as frameworks such as Tokio \cite{tokio-rs}
+		& Yes, in the standard library as well as frameworks such as tokio \cite{tokio-rs}
 		& Yes, in the standard library \cite{erlang-org}
 		& Yes, in the standard library \cite{golang-org}
 		\\
