--- a/final-submission/references.bib
+++ b/final-submission/references.bib
@@ -89,7 +89,7 @@
 }
 
 @ONLINE{rust-book-concurrency,
-	author = {{The Rust Project Developers}},
+	author = {{The Rust Authors}},
 	title = {{Fearless Concurrency} - The Rust Programming Language, Second Edition (draft)},
 	year = 2017,
 	urldate = {2017-10-10},
@@ -97,7 +97,7 @@
 }
 
 @ONLINE{rust-book-concurrency,
-	author = {{The Rust Project Developers}},
+	author = {{The Rust Authors}},
 	title = {{Foreign Function Interface} - The Rust Programming Language, Second Edition (draft)},
 	year = 2017,
 	urldate = {2017-10-10},
