Update goal section

--- a/final-submission/glossar.tex
+++ b/final-submission/glossar.tex
@@ -157,4 +157,8 @@
     name={header field},
     description={Components of the \gls{message-header} section of \glspl{message} that define operating parameters.}
 }
-
+\newglossaryentry{client-m-replication}
+{
+    name={client m-replication},
+    description={The \gls{client} defines a custom degree of redundancy from 1 to the number of \glspl{node} in the system. See \fullref{sec:fundamental-design-decisions}.}
+}
