Fix wrong glossary reference

--- a/final-submission/glossar.tex
+++ b/final-submission/glossar.tex
@@ -36,7 +36,7 @@
 \newglossaryentry{node-identifier}
 {
     name={node identifier},
-    description={A unique identifier assigned to any node to distinguish it from other \glspl{nodes}.}
+    description={A unique identifier assigned to any node to distinguish it from other \glspl{node}.}
 }
 \newglossaryentry{location}
 {
