Write section Achieved Result

--- a/final-submission/references.bib
+++ b/final-submission/references.bib
@@ -156,6 +156,13 @@
 	urldate = {2017-10-10},
 	howpublished={\url{https://tokio.rs/}},
 }
+@ONLINE{tokio-streaming,
+	author = {{Tokio Project}},
+	title = {{Tokio} - Streaming Protocols.},
+	year = 2017,
+	urldate = {2017-12-15},
+	howpublished={\url{https://tokio.rs/docs/going-deeper-tokio/streaming/}},
+}
 
 @ONLINE{docker-compose,
 	author = {{Docker Inc.}},
@@ -233,6 +240,15 @@
  address = {New York, NY, USA},
 }
 
+@book{TDD,
+ author = {Beck, Kent},
+ title = {Test Driven Development: By Example},
+ year = {2002},
+ isbn = {0321146530},
+ publisher = {Addison-Wesley Longman Publishing Co., Inc.},
+ address = {Boston, MA, USA},
+} 
+
 @book{security-patterns,
  author = {Schumacher, Markus and Fernandez, Eduardo and Hybertson, Duane and Buschmann, Frank},
  title = {Security Patterns: Integrating Security and Systems Engineering},
@@ -268,12 +284,28 @@ month={May},}
 	urldate = {2017-12-11},
 	howpublished={\url{https://www.sqlite.org/lockingv3.html}},
 }
-
-
 @ONLINE{sqlite-datatypes,
 	author = {{The SQLite Authors}},
 	title = {{Datatypes In SQLite Version 3}},
 	year = 2017,
 	urldate = {2017-12-11},
 	howpublished={\url{https://www.sqlite.org/datatype3.html}},
+}
+@article{knuth-optimise,
+	author = {Knuth, Donald E.},
+	title = {Structured Programming with Go to Statements},
+	journal = {ACM Comput. Surv.},
+	issue_date = {Dec. 1974},
+	volume = {6},
+	number = {4},
+	month = dec,
+	year = {1974},
+	issn = {0360-0300},
+	pages = {261--301},
+	numpages = {41},
+	url = {http://doi.acm.org/10.1145/356635.356640},
+	doi = {10.1145/356635.356640},
+	acmid = {356640},
+	publisher = {ACM},
+	address = {New York, NY, USA},
 }
