Add personal report

--- a/final-submission/appendices/personal_report.tex
+++ b/final-submission/appendices/personal_report.tex
@@ -1,3 +1,4 @@
+% !TeX spellcheck = en_GB
 \section{Personal Reports}
 
 \subsection{Raphael Zimmermann}
@@ -11,3 +12,14 @@ I played well together with Fabian even though we worked a lot apart. We found t
 The explorative nature of the project made it hard to come up with reasonable estimates. It was the right decision to keep sprints very short to stay agile. I also learned to appreciate the value of checklists, e.g. for sprint planning and completion.
 
 \subsection{Fabian Hauser}
+
+\enquote{It doesn't matter how beautiful your theory is...
+
+If it doesn't agree with experiment, it's wrong.} - Richard Feynman
+\vspace{1em}
+
+This quote by Richard Feynman summarises pretty well, what made this project very interesting to me - building both, a high level architecture and a concrete, working prototype. During our studies, we learned a lot about tools to create and design systems, but never had the actual chance to build a larger project with them. I am very delighted for this opportunity!
+
+One thing I especially enjoyed was working together with Raphael. As we come from different specialised backgrounds, with Raphael coming from a software and myself more from a system engineering side, our discussions regarding the application architecture were both very valuable and enriching.
+
+Wanting to learn Rust for a while, this project seemed like the ideal opportunity to do so. For me, this proved to be one of the main challenges during this project thought, as Rust has a very steep learning curve. This mainly had impact on the programming productivity, although this probably would have been even worse with the choice of a functional language. Still, I am glad to have had the opportunity to learn Rust.
