Add an archive option for the website

--- a/website/src/meetings/2017-09-22-kickoff.md
+++ b/website/src/meetings/2017-09-22-kickoff.md
@@ -71,4 +71,4 @@ _no upcoming absences_
 
 ## Next Meeting
 
-- [Weekly Meeting with MeF at 29.09 17:00 at his office](../2017-09-29-weekly-meeting)
+- [Weekly Meeting with MeF at 29.09 17:00 at his office](../2017-09-29-weekly-meeting/index.html)
