--- a/website/src/meetings/2017-09-18-kickoff.md
+++ b/website/src/meetings/2017-09-18-kickoff.md
@@ -58,5 +58,5 @@ _open issues must be completed before the next meeting_
 _no upcoming absences_
 
 ## Next Meeting
-- [Kickoff Meeting with MeF, 22.09.2017 15:15](../2017-09-22-kickoff)
+- [Kickoff Meeting with MeF, 22.09.2017 15:15](../2017-09-22-kickoff/index.html)
 
