Add chapter lessons learned

--- a/final-submission/glossar.tex
+++ b/final-submission/glossar.tex
@@ -162,3 +162,8 @@
     name={client m-replication},
     description={The \gls{client} defines a custom degree of redundancy from 1 to the number of \glspl{node} in the system. See \fullref{sec:fundamental-design-decisions}.}
 }
+\newglossaryentry{system-m-replication}
+{
+    name={system m-replication},
+    description={\Glspl{node} replicate chunks to all other nodes, leading to an equal number of \glspl{node} and redundancy degreee in the system. See \fullref{sec:fundamental-design-decisions}.}
+}
