--- a/final-submission/references.bib
+++ b/final-submission/references.bib
@@ -268,3 +268,12 @@ month={May},}
 	urldate = {2017-12-11},
 	howpublished={\url{https://www.sqlite.org/lockingv3.html}},
 }
+
+
+@ONLINE{sqlite-datatypes,
+	author = {{The SQLite Authors}},
+	title = {{Datatypes In SQLite Version 3}},
+	year = 2017,
+	urldate = {2017-12-11},
+	howpublished={\url{https://www.sqlite.org/datatype3.html}},
+}
