--- a/final-submission/appendices/personal_report.tex
+++ b/final-submission/appendices/personal_report.tex
@@ -18,8 +18,8 @@ The explorative nature of the project made it hard to come up with reasonable es
 If it doesn't agree with experiment, it's wrong.} - Richard Feynman
 \vspace{1em}
 
-This quote by Richard Feynman summarises pretty well, what made this project very interesting to me - building both, a high level architecture and a concrete, working prototype. During our studies, we learned a lot about tools to create and design systems, but never had the actual chance to build a larger project with them. I am very delighted for this opportunity!
+This quote by Richard Feynman summarises pretty well, what made this project very interesting to me - building both, a high level architecture and a concrete, working prototype. During our studies, we learned a lot about tools to create and design systems, but never had the actual chance to build a larger project with them. I am very delighted for this opportunity.
 
-One thing I especially enjoyed was working together with Raphael. As we come from different specialised backgrounds, with Raphael coming from a software and myself more from a system engineering side, our discussions regarding the application architecture were both very valuable and enriching.
+Something that I particularly enjoyed was working together with Raphael. As we come from different specialised backgrounds, with Raphael coming from a software and myself more from a system engineering side, our discussions regarding the application architecture were both very valuable and enriching.
 
 Wanting to learn Rust for a while, this project seemed like the ideal opportunity to do so. For me, this proved to be one of the main challenges during this project thought, as Rust has a very steep learning curve. This mainly had impact on the programming productivity, although this probably would have been even worse with the choice of a functional language. Still, I am glad to have had the opportunity to learn Rust.
