--- a/final-submission/glossar.tex
+++ b/final-submission/glossar.tex
@@ -165,5 +165,5 @@
 \newglossaryentry{system-m-replication}
 {
     name={system m-replication},
-    description={\Glspl{node} replicate chunks to all other nodes, leading to an equal number of \glspl{node} and redundancy degreee in the system. See \fullref{sec:fundamental-design-decisions}.}
+    description={\Glspl{node} replicate \glspl{chunk} to all other \glspl{node} in the system. As a result, the degree of redundancy is equal to the number of \glspl{node} in the system. See \fullref{sec:fundamental-design-decisions}.}
 }
