Add State of the Art section

--- a/final-submission/references.bib
+++ b/final-submission/references.bib
@@ -284,6 +284,7 @@ month={May},}
 	urldate = {2017-12-11},
 	howpublished={\url{https://www.sqlite.org/lockingv3.html}},
 }
+
 @ONLINE{sqlite-datatypes,
 	author = {{The SQLite Authors}},
 	title = {{Datatypes In SQLite Version 3}},
@@ -291,6 +292,7 @@ month={May},}
 	urldate = {2017-12-11},
 	howpublished={\url{https://www.sqlite.org/datatype3.html}},
 }
+
 @article{knuth-optimise,
 	author = {Knuth, Donald E.},
 	title = {Structured Programming with Go to Statements},
@@ -309,3 +311,111 @@ month={May},}
 	publisher = {ACM},
 	address = {New York, NY, USA},
 }
+
+@article{p2p-scheduling,
+    author = {Toka, Laszlo and Dell`Amico, Matteo and Michiardi, Pietro},
+    year = {2010},
+    month = {09},
+    title = {On Scheduling and Redundancy for P2P Backup}
+}
+
+@article{p2p-redundancy,
+    title = "Adaptive redundancy management for durable P2P backup",
+    journal = "Computer Networks",
+    volume = "83",
+    number = "Supplement C",
+    pages = "136 - 148",
+    year = "2015",
+    issn = "1389-1286",
+    doi = "https://doi.org/10.1016/j.comnet.2015.03.006",
+    url = "http://www.sciencedirect.com/science/article/pii/S1389128615000924",
+    author = "Matteo Dell’Amico and Pietro Michiardi and Laszlo Toka and Pasquale Cataldi",
+    keywords = "P2P, Backup, Storage, Redundancy"
+}
+
+@article{ipfs,
+    author    = {Juan Benet},
+    title     = {{IPFS} - Content Addressed, Versioned, {P2P} File System},
+    journal   = {CoRR},
+    volume    = {abs/1407.3561},
+    year      = {2014},
+    url       = {http://arxiv.org/abs/1407.3561},
+    archivePrefix = {arXiv},
+    eprint    = {1407.3561},
+    timestamp = {Wed, 07 Jun 2017 14:40:21 +0200},
+    biburl    = {http://dblp.org/rec/bib/journals/corr/Benet14},
+    bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+
+@INPROCEEDINGS{tahoe-lafs,
+    author={M. Selimi and F. Freitag},
+    booktitle={2014 IEEE Fourth International Conference on Big Data and Cloud Computing},
+    title={Tahoe-LAFS Distributed Storage Service in Community Network Clouds},
+    year={2014},
+    volume={},
+    number={},
+    pages={17-24},
+    doi={10.1109/BDCloud.2014.24},
+    ISSN={},
+    month={Dec},
+}
+
+@article{afs,
+    author = {Howard, John H. and Kazar, Michael L. and Menees, Sherri G. and Nichols, David A. and Satyanarayanan, M. and Sidebotham, Robert N. and West, Michael J.},
+    title = {Scale and Performance in a Distributed File System},
+    journal = {ACM Trans. Comput. Syst.},
+    issue_date = {Feb. 1988},
+    volume = {6},
+    number = {1},
+    month = feb,
+    year = {1988},
+    issn = {0734-2071},
+    pages = {51--81},
+    numpages = {31},
+    url = {http://doi.acm.org/10.1145/35037.35059},
+    doi = {10.1145/35037.35059},
+    acmid = {35059},
+    publisher = {ACM},
+    address = {New York, NY, USA},
+}
+
+@inproceedings{ceph,
+    author = {Weil, Sage A. and Brandt, Scott A. and Miller, Ethan L. and Long, Darrell D. E. and Maltzahn, Carlos},
+    title = {Ceph: A Scalable, High-performance Distributed File System},
+    booktitle = {Proceedings of the 7th Symposium on Operating Systems Design and Implementation},
+    series = {OSDI '06},
+    year = {2006},
+    isbn = {1-931971-47-1},
+    location = {Seattle, Washington},
+    pages = {307--320},
+    numpages = {14},
+    url = {http://dl.acm.org/citation.cfm?id=1298455.1298485},
+    acmid = {1298485},
+    publisher = {USENIX Association},
+    address = {Berkeley, CA, USA},
+}
+
+@ONLINE{borg-backup,
+    author = {{The Borg Backup Authors}},
+    title = {{Borg Backup} - a deduplicating backup program},
+    year = 2017,
+    urldate = {2017-10-20},
+    howpublished={\url{http://borgbackup.readthedocs.io/}},
+}
+
+@ONLINE{rdedup,
+    author = {{Dawid Ciężarkiewicz et al.}},
+    title = {Data deduplication engine, supporting optional compression and public key encryption.},
+    year = 2017,
+    urldate = {2017-10-21},
+    howpublished={\url{https://github.com/dpc/rdedup}},
+}
+
+@ONLINE{rsync,
+    author = {{Wayne Davison et al.}},
+    title = {{rsync} - an open source utility that provides fast incremental file transfer.},
+    year = 2017,
+    urldate = {2017-10-21},
+    howpublished={\url{https://rsync.samba.org/}},
+}
+
