--- a/final-submission/final-submission.tex
+++ b/final-submission/final-submission.tex
@@ -257,6 +257,7 @@ Furthermore, we would like to thank Andrea~Jurt~Massey for her feedback regardin
 \include{appendices/requirements}
 \include{appendices/architecture}
 \include{appendices/language-evaluation}
+\include{appendices/prototype_help}
 \include{appendices/personal_report}
 
 %----------------------------------------------------------------------------------------
